--- a/src/app/Public/Layers/navbar/navbar.component.html
+++ b/src/app/Public/Layers/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar-nav w-100 border-b position-fixed">
+<nav class="navbar-nav w-100 border-bottom position-fixed">
     <div class="container-fluid d-grid grid-custom h-100">
         <div class="d-flex">
            <div class="menu-key d-flex justify-content-center align-items-center h-100 color-gr pr-3">
@@ -13,11 +13,23 @@
             <label class="position-absolute color-wh ">
                <ion-icon name="search-outline"></ion-icon>
             </label>
+            <div class="tb-results">
+                
+            </div>
         </form>
         <div class="sign d-flex justify-content-end align-items-center pr-3">
             <p class="fs-14 fw-500  mb-0 d-flex justify-content-end align-items-center color-gr mr-3"><ion-icon name="search-outline"></ion-icon></p>
-            <p class="fs-12 fw-500  mb-0 d-flex justify-content-end align-items-center color-gr"><ion-icon name="person-circle-outline" class="fs-20 pr-2"></ion-icon><span>Sign in / Register</span></p>
+            <div class="fs-12 fw-500  mb-0 d-flex justify-content-end align-items-center color-gr" *ngIf="userGet">
+                <ion-icon name="person-circle-outline" class="fs-20 pr-2"></ion-icon>
+                <div>
+                    <span class="d-block">{{userGet.name}}</span>
+                </div>
+            </div>
         </div>
     </div>
 </nav> 
 <nav></nav>
+
+<script>
+    alert('hello');
+</script>
