--- a/src/app/Public/pages/browse/browse.component.html
+++ b/src/app/Public/pages/browse/browse.component.html
@@ -1,1 +1,87 @@
-<p>browse works!</p>
+<ul class="navbar-nav flex-row Taber color-wh fs-13 mb-5">
+    <li data="NewRelease" class="pr-3">NewRelease</li>
+    <li data="Popular" class="pr-3">Popular</li>
+    <li data="Music"   class="pr-3">Music</li>
+    <li data="Album"   class="pr-3">Album</li>
+    <li data="playlist" class="pr-3">playlist</li>
+</ul>
+<section class="category">
+    <h3 class="fs-17 fw-500 color-wh  pb-2">Popular Musics</h3>
+    <div class="owl-carousel fiveOwl owl-theme">
+      <div class="tb-music-box-md music" *ngFor="let alltracke of alltrackes">
+        <div class="tb-music-box-md music">
+          <img [src]="alltracke.img">
+          <div class="overlayer  top-0 position-absolute w-100 h-100 align-items-start  p-2 linear-black player">
+            <div class="position-relative w-100 h-100 justify-content-between flex-column d-flex">
+              <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11"><i
+                  class="fas fa-ellipsis-v"></i></button>
+              <div class="toggles">
+              </div>
+              <div class="song-lower d-flex">
+                <button class="trans-me pr-2 color-sv play" (click)="gettrackeByID(alltracke.id)"><i
+                    class="fas fa-play"></i></button>
+                <div class="song-info">
+                  <h4 class="color-wh fs-14 fw-600 text-uppercase mb-0">{{ alltracke.name }}</h4>
+                  <h5 class="color-sv fs-11 fw-300">{{ alltracke.band }}</h5>
+                </div>
+              </div>
+              <div class="dropdown position-absolute"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="category mt-5">
+    <h3 class="fs-17 fw-500 color-wh  pb-2">New Release</h3>
+    <div class="owl-carousel fiveOwl">
+      <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let alltracke of alltrackes">
+        <img src="http://music.flatfull.com/waveme/wp-content/uploads/sites/2/2020/09/Artboard-15.png">
+        <div class="overlay">
+          <ion-icon name="ellipsis-vertical-outline" class="icon1"></ion-icon>
+          <ion-icon name="caret-forward-circle-outline" class="icon"></ion-icon>
+        </div>
+        <div class="musicInfo">
+          <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">Sound Waveform</h3>
+          <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">Heysound</h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="category mt-5">
+    <div class="containBox mt-4 ">
+      <div class="containContainerBox pt-4">
+        <h3 class="text-center mt-5 pt-5">Discover songs you’ll love</h3>
+        <p class="text-center  pt-3 fs-13">Find the most popular artists and listen their music. Create your own<br>
+          playlist when listening to them.</p>
+        <button class="btnContainBox mt-3 fs-13">Explore the new music</button>
+      </div>
+    </div>
+  </section>
+  <section class="category  mt-5">
+    <h3 class="fs-17 fw-500 color-wh  pb-2">New Release</h3>
+    <div class="owl-carousel fiveOwl">
+      <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let alltracke of alltrackes">
+        <img src="http://music.flatfull.com/waveme/wp-content/uploads/sites/2/2020/09/Artboard-15.png">
+        <div class="overlay">
+          <ion-icon name="ellipsis-vertical-outline" class="icon1"></ion-icon>
+          <ion-icon name="caret-forward-circle-outline" class="icon"></ion-icon>
+        </div>
+        <div class="musicInfo">
+          <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">Sound Waveform</h3>
+          <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">Heysound</h4>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="pt-5 mb-4 pb-5 border-top">
+    <p class="fs-12 color-sv">@ Copyright 2021 Waveme Theme. All Rights Reserved</p>
+    <ul class="navbar-nav fs-12 color-wh flex-row">
+      <li class="nav-item pr-2">Service Terms</li>
+      <li class="nav-item pr-2">Music Policy</li>
+      <li class="nav-item pr-2">Cookie Warnings</li>
+      <li class="nav-item pr-2">Support</li>
+      <li class="nav-item pr-2">Feedback</li>
+    </ul>
+  </footer>
+  
