--- a/src/app/Public/users/signup/signup.component.html
+++ b/src/app/Public/users/signup/signup.component.html
@@ -1,1 +1,52 @@
-<p>signup works!</p>
+<div class="tb-container d-flex justify-content-center align-items-center h-100">
+  <div class="container">
+    <div class="row justify-content-center align-items-center mt-5">
+      <div class="col-md-12 text-center pt-5 rowRegister">
+        <h1 class="text-center color-wh fs-20">Register</h1>
+
+        <form action="#" method="POST" class="userForm" #form="ngForm" (ngSubmit)="onSubmit(form)">
+          <div class="input-group">
+            <ion-icon name="person-circle-outline" class="fs-22 color-wh pt-2 pl-2"></ion-icon>
+            <input type="text" class="form-control" name="name" placeholder="User Name" ngModel>
+            <div class="error text-white d-flex justify-content-center align-items-center" *ngIf="regname">
+              {{ regname }}
+            </div>
+          </div>
+
+          <div class="input-group">
+            <ion-icon name="person-circle-outline" class="fs-22 color-wh pt-2 pl-2"></ion-icon>
+            <input type="text" class="form-control" name="email" placeholder="User Name" ngModel>
+            <div class="error text-white d-flex justify-content-center align-items-center" *ngIf="regname">
+              {{ regname }}
+            </div>
+          </div>
+
+          <div class="input-group">
+            <ion-icon name="person-circle-outline" class="fs-22 color-wh pt-2 pl-2"></ion-icon>
+            <input type="password" class="form-control" name="password" placeholder="User Name" ngModel>
+            <div class="error text-white d-flex justify-content-center align-items-center" *ngIf="regname">
+              {{ regname }}
+            </div>
+          </div>
+          <div class="input-group">
+            <ion-icon name="lock-closed-outline" class="fs-22 color-wh pt-2 pl-2"></ion-icon>
+            <input type="password" class="form-control" name="password_confirmation" placeholder="Confirm Password" ngModel>
+          </div>
+
+          <div class="row text-center pt-3">
+            <div class="col-md-12">
+              <input class="btnlog color-wh mt-2" type="submit" value="SIGN UP">
+            </div>
+          </div>
+
+          <div class="row text-center pt-3">
+            <div class="col-md-12">
+              <a href="/login" class="fs-12 color-wh">Sign IN</a>
+            </div>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
