--- a/src/media.css
+++ b/src/media.css
@@ -39,6 +39,12 @@
     .navbar-nav .container-fluid.grid-custom {
         grid-template-columns: 50% 50% !important;
     }
+    .song-list {
+        grid-template-columns: 5% 50%  45% !important;
+    }
+    .song-list  .rel{
+        display: none !important;
+    } 
 }
 @media only screen and (max-width: 781px) {
     aside {
