--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://pro.fontawesome.com/releases/v5.10.0/css/all.css');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
 @import url('media.css');
 @import url('error.css');
 :root {
@@ -744,4 +745,84 @@ aside ion-icon {
 }
 .owl-theme .owl-nav [class*=owl-]:hover {
     color: #ccc;
+}
+
+/*category*/
+section.category {
+    min-height: 209px;
+}
+
+.playlist {
+    background-image: linear-gradient(356deg
+,#101010,#101010,#10101082,transparent),url('./assets/images/daniel-lincoln-NR705beN_CU-unsplash.jpg');
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: 100% 100%;
+    
+}
+
+.playlist .playlist-poster {
+    width: 283px;
+    height: 342px;
+}
+
+.playlist .music-info h2{
+    color: #fff;
+    font-weight: bold;
+}
+.playlist .music-info p {
+    color: #ccc;
+    font-size: 12px;
+}
+
+.playlist .music-info button {
+    font-size: 12px;
+    width: 100px;
+    border-radius: 20px;
+    background: #fff;
+    border: navajowhite;
+    color: #000;
+    font-weight: bold;
+    transition: all .3s linear;
+}
+.playlist .music-info button:hover {
+    background: black;
+    color: #fff;
+}
+
+.playlist .song-list {
+    height: 80px;
+    margin-bottom: 2px;
+    display: grid !important;
+    grid-template-columns: 5% 15% 70% 10%;
+}
+.playlist .song-list:not(:last-child) {
+    background-color: #1a1a1a;
+}
+.playlist .song-list button{
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 12px;
+}
+
+.playlist .song-list img {
+    width: 40px;
+    height: 40px;
+    display: grid;
+    grid-template-columns: 30% 60% 10%;
+}
+
+.playlist .song-list h4 {
+    font-size: 12px;
+    color: #fff;
+    font-weight: revert;
+    margin: 0;
+}
+
+.playlist .song-list p {
+    color:  #ccc;
+    font-size: 12px;
+    margin: 0;
 }
