--- a/src/app/Public/Layers/musicplayer/musicplayer.component.html
+++ b/src/app/Public/Layers/musicplayer/musicplayer.component.html
@@ -5,8 +5,8 @@
     <div class="loader" *ngIf="loader"></div>
     <ion-icon name="pause" class="color-wh fs-23" id="play" (click)="play()" *ngIf="!loader && playTarget "></ion-icon>
     <ion-icon name="arrow-forward" class="color-wh fs-18" id="nxt" (click)="next()"></ion-icon>
-    <ion-icon name="repeat" class="color-wh fs-18" id="playl"  (click)="playlistInc()"></ion-icon>
-    <ion-icon name="shuffle" class="color-wh fs-18" id="shuf"></ion-icon>
+    <ion-icon name="repeat" class="fs-18" id="playl"  (click)="playlistInc()"   [ngClass]="{'color-wh' : playlistColor, 'color-or': !playlistColor}"></ion-icon>
+    <ion-icon name="shuffle" class=" fs-18" id="shuf" (click)="shuffleInc()" [ngClass]="{'color-wh' : shuffleColor, 'color-or': !shuffleColor}"></ion-icon>
    </div> 
    <div class="tfn d-flex ">
        <img class="musicPlayerImg" src="{{playImg}}" id="musicImg">
