--- a/src/app/Public/users/login/login.component.css
+++ b/src/app/Public/users/login/login.component.css
@@ -1,48 +1,73 @@
-/* login screen */
-
-.rowlogin{
-    background-color: #1a1f24;
-    max-width: 400px;
-    min-height: 400px;
-    border: 1px solid white;
-    border-radius: 10px;
-}
-.input-group{
-    margin-top: 15px;
-    margin-bottom: 18px;
-    border-bottom: 1px solid white;
-
-}
-.input-group .form-control{
-    border: none;
-    outline: none ;
-    box-shadow: none;
-    background: transparent !important;
-    padding: 10px;
-    color: white;
-    font-size: 13px;
+/* Login page main  */
+.login-wrapper {
+    min-height: 100vh !important;
+    height: 100%;
+    background-color: var(--white);
 }
 
-.input-group .form-control::placeholder{
-    font-size: 13px;
+.login-wrapper .logo {
+    border-color: #ccc !important;
 }
 
-.btnlog{
-    width: 200px;
-    height: 35px;
-    cursor: pointer;
-    color: var(--black) !important;
-    border: 0;
-   outline: none;
-   border-radius: 30px;
+.login-wrapper .logo img{
+    width: 142px;
 }
 
-/* Register */
-.rowRegister{
-    background-color: #1a1f24;
-    height: 430px;
-    width: 400px;
-    border: 1px solid white;
-    border-radius: 10px;
+.login-wrapper .auth h3,
+.login-wrapper .mail h3 {
+    font-size: 14px;
+    font-weight: bold;
+}
+/* Auth */
+.login-wrapper .auth button {
+    border: navajowhite;
+    color: #fff;
+    font-size: 14px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    min-width: 400px;
+    text-transform: uppercase;
+}
 
+.login-wrapper .auth button.fb {
+    background: #3a61b3;
+}
+
+.login-wrapper .auth button.go {
+    background: var(--black);
+}
+
+.login-wrapper .auth button p {
+    font-size: 12px;
+    font-weight: bold;
+    padding: 0 10px;
+}
+
+/* Mail */
+
+.mail {
+    min-width: 400px;
+}
+
+.mail label {
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.mail input {
+    padding: 5px;
+    font-size: 12px;
+}
+
+.mail input[type = 'submit'] {
+    width: 100%;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.mail .tools .forget,
+.mail .tools .signup {
+    color: var(--gray);
+    font-size: 12px;
+    font-weight: bold;
 }
