--- a/src/error.css
+++ b/src/error.css
@@ -1,7 +1,6 @@
 .error {
-    width: 100%;
-    height: 50px;
-    background: var(--dark-gray);
+    font-size: 12px;
+    color: #ff2828;
 }
 
 .fail {
