--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,9 @@ body {
 .color-sv {
     color: var(--sliver);
 }
+.color-or {
+    color: orangered;
+}
 /* Border */
 .border-left {
     border-left: 1px solid var(--borderColor) !important
