--- a/src/app/Public/pages/home/home.component.html
+++ b/src/app/Public/pages/home/home.component.html
@@ -6,8 +6,8 @@
         <img [src]="alltracke.img">
         <div class="overlayer  top-0 position-absolute w-100 h-100 align-items-start  p-2 linear-black player">
           <div class="position-relative w-100 h-100 justify-content-between flex-column d-flex">
-            <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11"><i
-                class="fas fa-ellipsis-v"></i></button>
+            <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11" [id]="alltracke.id">
+              <i class="fas fa-ellipsis-v"></i></button>
             <div class="toggles">
             </div>
             <div class="song-lower d-flex">
