--- a/src/styles.css
+++ b/src/styles.css
@@ -327,7 +327,7 @@ aside ion-icon {
 /*tb-music-box-asdad*/
 .music img {
     width: 100%;
-    height: 100%;
+    height: 197px;
     border-radius: 4px;
 }
 .tb-music-box-sm,
@@ -646,12 +646,6 @@ aside ion-icon {
     margin-left: 37%;
 }
 
-.overlay {
-    height: 50%;
-    width: 100%;
-    opacity: 0;
-    transition: .3s ease;
-  }
 
   .musicBoxBrowse:hover .overlay
    {
