--- a/src/app/Public/pages/not-found/not-found.component.html
+++ b/src/app/Public/pages/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<app-navbar></app-navbar>
+<div class="tb-container d-flex">
+    <app-sidenav></app-sidenav>
+    <div class="fof">
+        <canvas></canvas>
+      </div>
+</div>
+<app-musicplayer></app-musicplayer>
+<app-overlay></app-overlay>
