--- a/src/app/Public/Layers/sidenav/sidenav.component.css
+++ b/src/app/Public/Layers/sidenav/sidenav.component.css
@@ -26,3 +26,8 @@ aside ion-icon {
     position: relative;
     top: 3px;
 }
+
+aside .active a,
+aside .active ion-icon {
+    color: orangered;
+}
