--- a/src/app/Public/pages/playlist/playlist.component.html
+++ b/src/app/Public/pages/playlist/playlist.component.html
@@ -1,37 +1,37 @@
 <app-navbar></app-navbar>
 <div class="tb-container d-flex">
   <app-sidenav></app-sidenav>
-  <div class="playlist mt-0">
-    <div class="playlist-header">
+  <div class="playlist mt-0" style="background-image:  linear-gradient(356deg
+  ,#101010,#101010,#10101082,transparent),url('{{ playlistData.musics[0].img  }}');">
+    <div class="playlist-header" >
       <div class="container">
         <Div class="row mt-5">
           <div class="playlist-poster p-3">
-            <img src="../../../../assets/images/daniel-lincoln-NR705beN_CU-unsplash.jpg" class="w-100 h-100">
+            <img src="{{ playlistData.musics[0].img }}" class="w-100 h-100">
           </div>
           <div class="music-info ml-4 mt-3">
             <h2>{{ playlistData.name }}</h2>
             <p>Created At: {{ playlistData.created_at | date:'mediumDate'}}</p>
             <p>Number of songs: {{ playlistMusicCount }} Songs</p>
-            <button class="btn">Play All</button>
+            <button class="btn" (click)="getPlaylistAction()">Play All</button>
           </div>
         </Div>
       </div>
     </div>
     <div class="playlist-body mt-5">
-        <Div class="song-list  container-fluid align-items-center">
+        <Div class="song-list  container-fluid align-items-center" *ngFor="let item of playlistData.musics">
             <button class="playbtn" #div>
               <i class="fas fa-play"></i>
             </button>
-            <div class="song-info d-flex align-items-center ml-3">
-              <img [src]="">
+            <div class="song-info d-flex align-items-center ml-3" >
+              <img [src]="item.img">
               <div class="ml-3">
-                <h4></h4>
+                <h4>{{ item.name }}</h4>
                 <p>Sia</p>
               </div>
             </div>
             <div class="ml-5 pl-4 rel">
-              <p>Release Date: 
-              </p>
+              <p>Release Date: {{ playlistData.created_at | date:'mediumDate'}}</p>
             </div>
             <button class="ml-auto mr-3">
               Remove
