--- a/src/app/Public/pages/home/home.component.html
+++ b/src/app/Public/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="category">
+<section class="category mt-5">
   <h3 class="fs-17 fw-500 color-wh  pb-2">Popular Musics</h3>
   <div class="owl-carousel fourOwl owl-theme">
     <div class="tb-music-box-md music" *ngFor="let alltracke of alltrackes">
