--- a/src/app/Public/pages/pages.component.html
+++ b/src/app/Public/pages/pages.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="tb-container d-flex">
     <app-sidenav></app-sidenav>
-    <div class="tb-page d-flex flex-column container mt-5">
+    <div class="tb-page d-flex flex-column container">
         <router-outlet></router-outlet>
     </div>
 </div>
