--- a/src/app/Public/Layers/sidenav/sidenav.component.html
+++ b/src/app/Public/Layers/sidenav/sidenav.component.html
@@ -9,7 +9,8 @@
          </ul>
          <p class="color-gr fs-12 mt-4 splitter"><span>Users</span></p>
          <ul class="navbar-nav">
-             <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a routetLink="playlist">Playlist</a></span></li>
+             <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a [routerLink]="['/playlist/28']"
+             routerLinkActive="router-link-active" >Playlist</a></span></li>
              <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span>Profile</span></li>
              <li class="nav-item color-sv" *ngIf="!token"><ion-icon name="log-in-outline"></ion-icon><span><a href="/login">Login</a></span></li>
              <li class="nav-item color-sv" *ngIf="token" (click)="logout()" ><ion-icon name="log-in-outline"></ion-icon><span>Logout</span></li>
