--- a/src/app/Public/pages/playlist/playlist.component.html
+++ b/src/app/Public/pages/playlist/playlist.component.html
@@ -1,9 +1,10 @@
-<app-navbar></app-navbar>
 <div class="tb-container d-flex">
-  <app-sidenav></app-sidenav>
-  <div class="playlist mt-0" style="background-image:  linear-gradient(356deg
-  ,#101010,#101010,#10101082,transparent),url('{{ playlistData.musics[0].img  }}');">
+  <div class="playlist mt-0 position-relative" style="background-image:  linear-gradient(356deg
+  ,#101010,#101010,#10101082,transparent),url('{{ playlistData.musics[0].img  }}');" >
     <div class="playlist-header" >
+      <div class="btn-area d-flex  ml-auto">
+         <button class="btn btn-danger">Delete</button>
+      </div>
       <div class="container">
         <Div class="row mt-5">
           <div class="playlist-poster p-3">
@@ -12,15 +13,14 @@
           <div class="music-info ml-4 mt-3">
             <h2>{{ playlistData.name }}</h2>
             <p>Created At: {{ playlistData.created_at | date:'mediumDate'}}</p>
-            <p>Number of songs: {{ playlistMusicCount }} Songs</p>
             <button class="btn" (click)="getPlaylistAction()">Play All</button>
           </div>
         </Div>
       </div>
     </div>
     <div class="playlist-body mt-5">
-        <Div class="song-list  container-fluid align-items-center" *ngFor="let item of playlistData.musics">
-            <button class="playbtn" #div>
+        <Div class="song-list  container-fluid align-items-center" *ngFor="let item of playlistData.musics;let indexEle=index" #song>
+            <button class="playbtn" #div (click)="getPlaylistAction(indexEle)">
               <i class="fas fa-play"></i>
             </button>
             <div class="song-info d-flex align-items-center ml-3" >
@@ -33,7 +33,7 @@
             <div class="ml-5 pl-4 rel">
               <p>Release Date: {{ playlistData.created_at | date:'mediumDate'}}</p>
             </div>
-            <button class="ml-auto mr-3">
+            <button class="ml-auto mr-3" (click)="playlistRemove(item.id,song)" (click)="removeFromPayload(indexEle)">
               Remove
             </button>
           </Div>
@@ -43,4 +43,3 @@
     </div>
   </div>
 </div>
-<app-musicplayer></app-musicplayer>
