--- a/src/app/Public/pages/profile/profile.component.html
+++ b/src/app/Public/pages/profile/profile.component.html
@@ -1,30 +1,31 @@
+
 <section class="category">
-    <h3 class="fs-17 fw-500 color-wh  pb-2">Favorite Music</h3>
-    <div class="owl-carousel fourOwl owl-theme">
-      <div class="tb-music-box-md music" *ngFor="let alltracke of alltrackes">
-        <div class="tb-music-box-md music">
-          <img [src]="alltracke.img">
-          <div class="overlayer  top-0 position-absolute w-100 h-100 align-items-start  p-2 linear-black player">
-            <div class="position-relative w-100 h-100 justify-content-between flex-column d-flex">
-              <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11"><i
-                  class="fas fa-ellipsis-v"></i></button>
-              <div class="toggles">
-              </div>
-              <div class="song-lower d-flex">
-                <button class="trans-me pr-2 color-sv play" (click)="gettrackeByID(alltracke.id)"><i
-                    class="fas fa-play"></i></button>
-                <div class="song-info">
-                  <h4 class="color-wh fs-14 fw-600 text-uppercase mb-0">{{ alltracke.name }}</h4>
-                  <h5 class="color-sv fs-11 fw-300">{{ alltracke.band }}</h5>
-                </div>
-              </div>
-              <div class="dropdown position-absolute"></div>
+  <h3 class="fs-17 fw-500 color-wh  pb-2">Fav Musics</h3>
+  <div class="owl-carousel fourOwl owl-theme">
+    <div class="tb-music-box-md music" *ngFor="let alltracke of likes">
+      <div class="tb-music-box-md music">
+        <img [src]="alltracke.img">
+        <div class="overlayer  top-0 position-absolute w-100 h-100 align-items-start  p-2 linear-black player">
+          <div class="position-relative w-100 h-100 justify-content-between flex-column d-flex">
+            <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11"><i
+                class="fas fa-ellipsis-v"></i></button>
+            <div class="toggles">
             </div>
+            <div class="song-lower d-flex">
+              <button class="trans-me pr-2 color-sv play" (click)="gettrackeByID(alltracke.id)"><i
+                  class="fas fa-play"></i></button>
+              <div class="song-info">
+                <h4 class="color-wh fs-14 fw-600 text-uppercase mb-0">{{alltracke.name}}</h4>
+                <h5 class="color-sv fs-11 fw-300">{{ alltracke.band }}</h5>
+              </div>
+            </div>
+            <div class="dropdown position-absolute"></div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
   <!-- section2 playlist -->
   <section class="category mt-5">
     <h3 class="fs-17 fw-500 color-wh  pb-2">PlayLists</h3>
