--- a/src/app/Public/pages/home/home.component.html
+++ b/src/app/Public/pages/home/home.component.html
@@ -1,3 +1,10 @@
+<ul class="navbar-nav flex-row Taber color-wh fs-13 mb-5">
+  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/home">Discover</a></li>
+  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/browse">Browse</a></li>
+  <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/newrel">NewRelease</a></li>
+  <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/charts">charts</a></li>
+  <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/playlist">playlist</a></li>
+</ul>
 <section class="category">
   <h3 class="fs-17 fw-500 color-wh  pb-2">Popular Musics</h3>
   <div class="owl-carousel fourOwl owl-theme">
