--- a/src/app/Public/pages/newrelease/newrelease.component.html
+++ b/src/app/Public/pages/newrelease/newrelease.component.html
@@ -1,1 +1,7 @@
-<p>newrelease works!</p>
+<ul class="navbar-nav flex-row Taber color-wh fs-13 mb-5">
+    <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/home">Discover</a></li>
+    <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/browse">Browse</a></li>
+    <li  class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/newrel">NewRelease</a></li>
+    <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']"  routerLink="/charts">charts</a></li>
+    <li class="pr-3"><a [routerLinkActive]="['routerLinkActives']" routerLink="/playlist">playlist</a></li>
+</ul>
