--- a/src/styles.css
+++ b/src/styles.css
@@ -823,3 +823,16 @@ section.category {
     font-size: 12px;
     margin: 0;
 }
+.EnterEmail{
+    background-color: #1a1f24;
+    height: 300px;
+    width: 480px;
+    border-radius: 10px;
+  }
+  hr {
+    border-top: 0.5px solid rgb(151, 149, 149);
+  }
+
+  .routerLinkActives{
+      color: orangered !important;
+  }
