--- a/src/app/Public/Layers/navbar/navbar.component.html
+++ b/src/app/Public/Layers/navbar/navbar.component.html
@@ -16,6 +16,9 @@
             <div class="tb-results">
                 
             </div>
+            <div class="searchResult position-absolute top-0">
+                
+            </div>
         </form>
         <div class="sign d-flex justify-content-end align-items-center pr-3">
             <p class="fs-14 fw-500  mb-0 d-flex justify-content-end align-items-center color-gr mr-3"><ion-icon name="search-outline"></ion-icon></p>
