--- a/src/app/Public/Layers/overlay/overlay.component.html
+++ b/src/app/Public/Layers/overlay/overlay.component.html
@@ -1,4 +1,4 @@
-<div class="overlay position-absolute top-0 left-0 h-100 w-100  justify-content-center align-items-center">
+<div class="overlay position-fixed top-0 left-0 h-100 w-100  justify-content-center align-items-center">
    
     <div class="model container" id="playlistInsert" (click)="onClick($event)">
         
