--- a/src/app/Public/Layers/sidenav/sidenav.component.html
+++ b/src/app/Public/Layers/sidenav/sidenav.component.html
@@ -4,12 +4,11 @@
          <ul class="navbar-nav">
              <li class="nav-item color-sv" [routerLinkActive]="['active','/home']"><ion-icon name="logo-firefox"></ion-icon><span><a routerLink="/home" >Discover</a></span></li>
              <li class="nav-item color-sv" [routerLinkActive]="['active','/browse']"><ion-icon name="radio-outline"></ion-icon><span><a routerLink="/browse">Browse</a></span></li>
-             <li class="nav-item color-sv" [routerLinkActive]="['active','/newrel']"><ion-icon name="apps-outline"></ion-icon><span><a routerLink="/newrel">New Release</a></span></li>
-             <li class="nav-item color-sv" [routerLinkActive]="['active','/charts']"><ion-icon name="analytics-outline"></ion-icon><span><a routerLink="/charts">Charts</a></span></li>
+             <li class="nav-item color-sv" [routerLinkActive]="['active','/newrel']"><ion-icon name="apps-outline"></ion-icon><span><a routerLink="/newrel">Categories</a></span></li>
          </ul>
          <p class="color-gr fs-12 mt-4 splitter"><span>Users</span></p>
          <ul class="navbar-nav">
-             <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a [routerLink]="['/playing']"
+             <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a (click)="playDirectory()"
              routerLinkActive="router-link-active" >Playlist</a></span></li>
              <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span>Profile</span></li>
              <li class="nav-item color-sv" *ngIf="!token"><ion-icon name="log-in-outline"></ion-icon><span><a href="/login">Login</a></span></li>
