--- a/src/app/Public/pages/home/home.component.html
+++ b/src/app/Public/pages/home/home.component.html
@@ -1,21 +1,21 @@
 <section class="category mt-5">
   <h3 class="fs-17 fw-500 color-wh  pb-2">Popular Musics</h3>
   <div class="owl-carousel fourOwl owl-theme">
-    <div class="tb-music-box-md music" *ngFor="let alltracke of alltrackes">
+    <div class="tb-music-box-md music" *ngFor="let item of popular">
       <div class="tb-music-box-md music">
-        <img [src]="alltracke.img">
+        <img [src]="item.img">
         <div class="overlayer  top-0 position-absolute w-100 h-100 align-items-start  p-2 linear-black player">
           <div class="position-relative w-100 h-100 justify-content-between flex-column d-flex">
-            <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11" [id]="alltracke.id">
+            <button class="menu trans-me w-100 d-flex justify-content-end align-items-center color-wh fs-11" [id]="item.id">
               <i class="fas fa-ellipsis-v"></i></button>
             <div class="toggles">
             </div>
             <div class="song-lower d-flex">
-              <button class="trans-me pr-2 color-sv play" (click)="gettrackeByID(alltracke.id)"><i
+              <button class="trans-me pr-2 color-sv play" id="{{ item.id }}"><i
                   class="fas fa-play"></i></button>
               <div class="song-info">
-                <h4 class="color-wh fs-14 fw-600 text-uppercase mb-0">{{ alltracke.name }}</h4>
-                <h5 class="color-sv fs-11 fw-300">{{ alltracke.band }}</h5>
+                <h4 class="color-wh fs-14 fw-600 text-uppercase mb-0">{{ item.name }}</h4>
+                <h5 class="color-sv fs-11 fw-300">{{ item.band }}</h5>
               </div>
             </div>
             <div class="dropdown position-absolute"></div>
@@ -28,15 +28,16 @@
 <section class="category mt-5">
   <h3 class="fs-17 fw-500 color-wh  pb-2">New Release</h3>
   <div class="owl-carousel fiveOwl">
-    <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let alltracke of alltrackes">
-      <img src="http://music.flatfull.com/waveme/wp-content/uploads/sites/2/2020/09/Artboard-15.png">
-      <div class="overlay">
-        <ion-icon name="ellipsis-vertical-outline" class="icon1"></ion-icon>
-        <ion-icon name="caret-forward-circle-outline" class="icon"></ion-icon>
+    <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let item of newRelease">
+      <img src="{{ item.img }}">
+      <div class="overlay-bx">
+        <ion-icon name="ellipsis-vertical-outline" class="icon1 menu" [id]="item.id"></ion-icon>
+        <button class="trans-me pr-2 color-sv play" id="{{ item.id }}"><i
+          class="fas fa-play"></i></button>
       </div>
       <div class="musicInfo">
-        <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">Sound Waveform</h3>
-        <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">Heysound</h4>
+        <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">{{ item.name }}</h3>
+        <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">{{ item.band }}</h4>
       </div>
     </div>
   </div>
@@ -51,18 +52,19 @@
     </div>
   </div>
 </section>
-<section class="category  mt-5">
-  <h3 class="fs-17 fw-500 color-wh  pb-2">New Release</h3>
+<section class="category mt-5">
+  <h3 class="fs-17 fw-500 color-wh  pb-2">Random Picks</h3>
   <div class="owl-carousel fiveOwl">
-    <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let alltracke of alltrackes">
-      <img src="http://music.flatfull.com/waveme/wp-content/uploads/sites/2/2020/09/Artboard-15.png">
-      <div class="overlay">
-        <ion-icon name="ellipsis-vertical-outline" class="icon1"></ion-icon>
-        <ion-icon name="caret-forward-circle-outline" class="icon"></ion-icon>
+    <div class="tb-music-box-sm secBrowse1  d-grid" *ngFor="let item of rand">
+      <img src="{{ item.img }}">
+      <div class="overlay-bx">
+        <ion-icon name="ellipsis-vertical-outline" class="icon1 menu" [id]="item.id"></ion-icon>
+        <button class="trans-me pr-2 color-sv play" id="{{ item.id }}"><i
+          class="fas fa-play"></i></button>
       </div>
       <div class="musicInfo">
-        <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">Sound Waveform</h3>
-        <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">Heysound</h4>
+        <h3 class="fs-12 fw-400 pl-2 pt-3 color-wh">{{ item.name }}</h3>
+        <h4 class="fs-12 fw-400 pl-2 pb-3 color-wh color-sv">{{ item.band }}</h4>
       </div>
     </div>
   </div>
