--- a/src/styles.css
+++ b/src/styles.css
@@ -651,20 +651,37 @@ aside ion-icon {
    {
     opacity: 1;
   }
-  .icon {
-    color: white;
-    font-size: 45px;
+
+  .overlay-bx {
     position: absolute;
-    top: 50%;
-    left: 70%;
-}
-  .icon1 {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 8%;
-    left: 80%;
-}
+    width: 100%;
+    height: 67%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+  }
+
+  .overlay-bx ion-icon {
+    color: var(--white);
+    font-size: 19px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  .overlay-bx .play {
+    background: #fff;
+    color: var(--black);
+    font-size: 12px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 9px;
+    margin: 6px;
+  }
+
   .secBrowse2:hover .overlay{
        opacity: 1;
 }
@@ -684,6 +701,7 @@ aside ion-icon {
 .secBrowse1 img{
     z-index: 0;
     position: relative;
+    height: 175px;
 }
 @media(max-width:767px){ /*Mobile and tablet*/
     .btnContainBox {
@@ -744,6 +762,10 @@ aside ion-icon {
     color: #ccc;
 }
 
+.owl-next.disabled,
+.owl-prev.disabled {
+    color: #ccc;
+}
 /*category*/
 section.category {
     min-height: 209px;
