--- a/src/app/Public/Layers/sidenav/sidenav.component.css
+++ b/src/app/Public/Layers/sidenav/sidenav.component.css
@@ -17,7 +17,7 @@ aside .content {
 aside li {
     padding: 14px 0;
     font-size: 13px;
-    color: #fff;
+    color: var(--colorWhite);
 }
 
 aside ion-icon {
