--- a/src/app/Public/pages/home/home.component.html
+++ b/src/app/Public/pages/home/home.component.html
@@ -79,3 +79,20 @@
     <li class="nav-item pr-2">Feedback</li>
   </ul>
 </footer>
+
+<form action="">
+    email
+   password
+</form>
+
+<form>
+  username
+</form>
+
+<form>
+   email
+</form>
+
+<form>
+   password
+</form>
