--- a/src/app/Public/Layers/navbar/navbar.component.html
+++ b/src/app/Public/Layers/navbar/navbar.component.html
@@ -28,6 +28,11 @@
                     <span class="d-block">{{userGet.name}}</span>
                 </div>
             </div>
+            <div class="fs-12 fw-500  mb-0 d-flex justify-content-end align-items-center color-gr" *ngIf="!userGet.name">
+                <div>
+                    Sign/Register
+                </div>
+            </div>
         </div>
     </div>
 </nav> 
