--- a/src/app/Public/Layers/sidenav/sidenav.component.html
+++ b/src/app/Public/Layers/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
          <ul class="navbar-nav">
              <li class="nav-item color-sv"[routerLinkActive]="['active','/playlist']" ><ion-icon name="grid-outline"></ion-icon><span><a (click)="playDirectory()"
              routerLinkActive="router-link-active" >Playlist</a></span></li>
-             <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span>Profile</span></li>
+             <li class="nav-item color-sv"><ion-icon name="people-outline"></ion-icon><span><a [routerLink]="['/profile']" routerLinkActive="/profile">Profile</a> </span></li>
              <li class="nav-item color-sv" *ngIf="!token"><ion-icon name="log-in-outline"></ion-icon><span><a href="/login">Login</a></span></li>
              <li class="nav-item color-sv" *ngIf="token" (click)="logout()" ><ion-icon name="log-in-outline"></ion-icon><span>Logout</span></li>
              <li class="nav-item d-flex justify-content-start align-item-center">
